2010-08-10  Xavier Perseguers  <typo3@perseguers.ch>

	* Updated bug screenshot and added advanced mapping example in documentation
	* Added constants for all new bug options

2010-08-09  Xavier Perseguers  <typo3@perseguers.ch>

	* Now storing OS, browser name and browser version automatically

2010-08-08  Xavier Perseguers  <typo3@perseguers.ch>

	* Upload to TER
	* Raised version to 0.5.0
	* Removed README file as documentation (manual.sxw) is complete

2010-08-07  Xavier Perseguers  <typo3@perseguers.ch>

	* Started manual.sxw
	* Added README file as first step documentation

2010-08-06  Xavier Perseguers  <typo3@perseguers.ch>

	* Added userFunc registered in plugin.tx_mantisconnect_func.projects to get a Powermail select field with the list of projects

2010-08-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Initial upload